...
      }}
      minimizeBehavior="onScrollDown"
      disableIndicator
    >
      <NativeTabs.Trigger name="today">
        <NativeTabs.Trigger.Icon sf={nativeTabIcons.today.sf} md={nativeTabIcons.today.md} />
        <NativeTabs.Trigger.Label>Today</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="week">
        <NativeTabs.Trigger.Icon sf={nativeTabIcons.week.sf} md={nativeTabIcons.week.md} />
        <NativeTabs.Trigger.Label>Week</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="medicines">
...
